<resources>
    <string name="app_name">FeetTime</string>
    <string name="title_home">Home</string>
    <string name="title_forums">Forums</string>
    <string name="login_str">Login</string>
    <string name="register_str">Register</string>
    <string name="password_hint">Password (confirm)</string>
    <string name="password_label">Password</string>
    <string name="e_mail_label">E-mail</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="password_mismatch">Password is not the same</string>
    <string name="name">Room name</string>
    <string name="create_str">Create</string>
    <string name="cancel_str">Cancel</string>
    <string name="missing_input">Missing input</string>
    <string name="name_taken">Room name is used</string>
    <string name="enter_str">Enter</string>
    <string name="wrong_pass_msg">Wrong password</string>
    <string name="try_again_msg">Try again</string>
    <string name="is_private_msg">Is private</string>
    <string name="last_message_str">Last message:</string>
    <string name="new_room_str">New room</string>
    <string name="post">Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_img_btn">Wybierz zdjęcie</string>
    <string name="default_nickname">Nickname</string>
    <string name="defualt_dedscription">Opis profilu</string>
    <string name="default_image_title">Tytuł zdjęcia</string>
    <string name="default_image_description">Opis zdjęcia</string>
    <string name="default_money_text">Twoje środki:</string>
    <string name="cost_hint">Koszt subskrypcji twojego profilu</string>
    <string name="cost_label">Koszt subskrypcji</string>
    <string name="add_money">Doładuj</string>
    <string name="default_money">0</string>
    <string name="send_money_button">Prześlij</string>
    <string name="for_subscribers">Tylko dla subskrybujących</string>
    <string name="add_feet">Dodaj stopę</string>
    <string name="title_for_subs">Niedostępne</string>
    <string name="desc_for_subs">Zasubskrybuj aby dostać dostęp do zdjęcia</string>
    <string name="only_for_subs">Tylko dla subskrybujacych</string>
</resources>