<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:contentPadding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/name"
            android:textColorHint="@color/purple_500"
            android:visibility="visible"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/primary_variant_light"
            app:boxStrokeColor="@color/purple_200"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/secondary"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="14sp"
                tools:text="My new room" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/privateSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/is_private_msg"
            app:layout_constraintTop_toBottomOf="@id/room_name"
            app:layout_constraintEnd_toEndOf="@+id/dialog_positive_button"
            app:layout_constraintStart_toStartOf="@+id/dialog_negative_button" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:hint="@string/password_label"
            android:textColorHint="@color/primary_variant"
            android:visibility="gone"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/primary_variant_light"
            app:boxStrokeColor="@color/primary_variant"
            app:boxStrokeWidth="1dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/secondary"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/privateSwitch"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="14sp"
                tools:text="myPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/dialog_positive_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"

            android:text="@string/create_str"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/room_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dialog_negative_button"
            app:layout_constraintTop_toBottomOf="@id/room_password" />

        <Button
            android:id="@+id/dialog_negative_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"

            android:backgroundTint="@color/grey"
            android:text="@string/cancel_str"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialog_positive_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/room_name"
             />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>